--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,100 +1,61 @@
 ---
-import { Image } from "astro:assets";
-import logo from "../assets/me.jpg";
-import { Icon } from "astro-icon";
 import BaseLayout from "../layouts/BaseLayout.astro";
-
-let title = "Home | Long Nhat Nguyen";
-let description = "Welcome to Long Nhat Nguyen's Home";
+import Hero from "../components/Hero.astro";
 ---
 
-<BaseLayout title={title} description={description}>
-  <div class="items-start max-w-2xl mx-auto py-16">
-    <div class="flex flex-col-reverse sm:flex-row py-2">
-      <div class="pr-8">
-        <h1 class="font-bold text-2xl sm:text-3xl">
-          Hi 👋, I'm Long Nhat Nguyen
-        </h1>
-        <h2 class="font-semibold text-white/75">
-          I love music 🎵 and photography 📸
-        </h2>
-        <p class="text-white/70">
-          If we'll ever be remembered, I know it'll be for the way that we love.<br
-          />
-        </p>
-      </div>
-      <div class="mb-2">
-        <Image
-          src={logo}
-          alt="Long Nhat Nguyen"
-          width={720}
-          class="w-[144px] sm:w-[196px] rounded-full"
+<BaseLayout>
+  <div class="stack gap-20 lg:gap-48">
+    <div class="wrapper stack gap-8 lg:gap-20">
+      <header class="hero">
+        <Hero
+          title="Hello 👋, my name is Long Nhat Nguyen"
+          tagline="I love music 🎵 and photography 📸"
+          align="start"
         />
-      </div>
-    </div>
-
-    <div class="flex items-center gap-1">
-      <a href="mailto:torn4dom4n@gmail.com" target="_blank" title="Gmail">
-        <Icon
-          pack="tabler"
-          name="brand-gmail"
-          class="transition w-[36px] text-gray-400 hover:text-[#ea4335] hover:-translate-y-1 hover:scale-110 duration-150"
+        <img
+          alt="My portrait"
+          width="480"
+          height="620"
+          src="/assets/portrait.jpg"
         />
-      </a>
-      <a href="https://github.com/torn4dom4n" target="_blank" title="GitHub">
-        <Icon
-          pack="tabler"
-          name="brand-github"
-          class="transition w-[36px] text-gray-400 hover:text-[#fafafa] hover:-translate-y-1 hover:scale-110 duration-150"
-        />
-      </a>
-      <a
-        href="https://facebook.com/torn4dom4n"
-        target="_blank"
-        title="Facebook"
-      >
-        <Icon
-          pack="tabler"
-          name="brand-facebook"
-          class="transition w-[36px] text-gray-400 hover:text-[#1877f2] hover:-translate-y-1 hover:scale-110 duration-150"
-        />
-      </a>
-      <a
-        href="https://instagram.com/torn4dom4n"
-        target="_blank"
-        title="Instagram"
-      >
-        <Icon
-          pack="tabler"
-          name="brand-instagram"
-          class="transition w-[36px] text-gray-400 hover:text-[#fd1d1d] hover:-translate-y-1 hover:scale-110 duration-150"
-        />
-      </a>
-      <a href="https://twitter.com/torn4dom4n" target="_blank" title="Twitter">
-        <Icon
-          pack="tabler"
-          name="brand-twitter"
-          class="transition w-[36px] text-gray-400 hover:text-[#1da1f2] hover:-translate-y-1 hover:scale-110 duration-150"
-        />
-      </a>
-      <a href="https://youtube.com/@torn4dom4n" target="_blank" title="YouTube">
-        <Icon
-          pack="tabler"
-          name="brand-youtube"
-          class="transition w-[36px] text-gray-400 hover:text-[#ff0000] hover:-translate-y-1 hover:scale-110 duration-150"
-        />
-      </a>
-      <a
-        href="https://www.linkedin.com/in/torn4dom4n"
-        target="_blank"
-        title="linkedin"
-      >
-        <Icon
-          pack="tabler"
-          name="brand-linkedin"
-          class="transition w-[36px] text-gray-400 hover:text-[#0a66c2] hover:-translate-y-1 hover:scale-110 duration-150"
-        />
-      </a>
+      </header>
     </div>
   </div>
 </BaseLayout>
+<style>
+  .hero {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding-bottom: 1.25rem;
+    gap: 2rem;
+  }
+  .roles {
+    display: none;
+  }
+  .hero img {
+    aspect-ratio: 5 / 4;
+    object-fit: cover;
+    object-position: top;
+    border-radius: 1.5rem;
+    box-shadow: var(--shadow-md);
+  }
+  @media (min-width: 50em) {
+    .hero {
+      display: grid;
+      grid-template-columns: 6fr 4fr;
+      padding-inline: 2.5rem;
+      gap: 3.75rem;
+    }
+    .roles {
+      margin-top: 0.5rem;
+      display: flex;
+      gap: 0.5rem;
+    }
+    .hero img {
+      aspect-ratio: 3 / 4;
+      border-radius: 4.5rem;
+      object-fit: cover;
+    }
+  }
+</style>
