--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -32,8 +32,8 @@ const { title, description } = Astro.props;
     <style>
       :root {
         --_placeholder-bg: linear-gradient(transparent, transparent);
-        --bg-image-main: url("/assets/backgrounds/bg-main-light-800w.jpg");
-        --bg-image-main-curves: url("/assets/backgrounds/bg-main-light.svg");
+        --bg-image-main: url("/backgrounds/bg-main-light-800w.jpg");
+        --bg-image-main-curves: url("/backgrounds/bg-main-light.svg");
         --bg-image-footer: var(--_placeholder-bg);
         --bg-svg-blend-mode: overlay;
         --bg-blend-mode: darken;
@@ -44,8 +44,8 @@ const { title, description } = Astro.props;
       }
 
       :root.theme-dark {
-        --bg-image-main: url("/assets/backgrounds/bg-main-dark-800w.jpg");
-        --bg-image-main-curves: url("/assets/backgrounds/bg-main-dark.svg");
+        --bg-image-main: url("/backgrounds/bg-main-dark-800w.jpg");
+        --bg-image-main-curves: url("/backgrounds/bg-main-dark.svg");
         --bg-svg-blend-mode: darken;
         --bg-blend-mode: lighten;
       }
@@ -53,26 +53,26 @@ const { title, description } = Astro.props;
       /* These backgrounds are displayed below the fold, so we lazy load them
 			   once the `.loaded` class has been set.  */
       :root.loaded {
-        --bg-image-footer: url("/assets/backgrounds/bg-footer-light-800w.jpg");
+        --bg-image-footer: url("/backgrounds/bg-footer-light-800w.jpg");
       }
       :root.loaded.theme-dark {
-        --bg-image-footer: url("/assets/backgrounds/bg-footer-dark-800w.jpg");
+        --bg-image-footer: url("/backgrounds/bg-footer-dark-800w.jpg");
       }
 
       @media (min-width: 50em) {
         :root {
           --bg-scale: 1;
-          --bg-image-main: url("/assets/backgrounds/bg-main-light-1440w.jpg");
+          --bg-image-main: url("/backgrounds/bg-main-light-1440w.jpg");
         }
         :root.theme-dark {
-          --bg-image-main: url("/assets/backgrounds/bg-main-dark-1440w.jpg");
+          --bg-image-main: url("/backgrounds/bg-main-dark-1440w.jpg");
         }
 
         :root.loaded {
-          --bg-image-footer: url("/assets/backgrounds/bg-footer-light-1440w.jpg");
+          --bg-image-footer: url("/backgrounds/bg-footer-light-1440w.jpg");
         }
         :root.loaded.theme-dark {
-          --bg-image-footer: url("/assets/backgrounds/bg-footer-dark-1440w.jpg");
+          --bg-image-footer: url("/backgrounds/bg-footer-dark-1440w.jpg");
         }
       }
 
@@ -80,7 +80,7 @@ const { title, description } = Astro.props;
         min-height: 100%;
         isolation: isolate;
         background:
-					/*noise*/ url("/assets/backgrounds/noise.png") top
+					/*noise*/ url("/backgrounds/noise.png") top
             center/220px repeat,
           /*footer*/ var(--bg-image-footer) bottom
             center/var(--bg-gradient-size) no-repeat,
