--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,6 +1,8 @@
 ---
 import BaseLayout from "../layouts/BaseLayout.astro";
 import Hero from "../components/Hero.astro";
+import { Image } from "astro:assets";
+import Portrait from "../assets/portrait.jpg";
 ---
 
 <BaseLayout>
@@ -12,11 +14,12 @@ import Hero from "../components/Hero.astro";
           tagline="I love music 🎵 and photography 📸"
           align="start"
         />
-        <img
-          alt="My portrait"
+        <Image
+          src={Portrait}
           width="480"
-          height="620"
-          src="/assets/portrait.jpg"
+          quality="100"
+          format="webp"
+          alt="My portrait"
         />
       </header>
     </div>
